--- a/Folmes/Resources/Style.css
+++ b/Folmes/Resources/Style.css
@@ -11,7 +11,7 @@ a:active { color:#48b; }
 .file:active { background-color:#333; }
 
 .item { cursor:pointer;}
-.message,.item { border-bottom:0px #333 solid; margin:0; padding:3px 4px 4px 6px; }
+.message,.item { border-bottom:0 #333 solid; margin:0; padding:3px 4px 4px 6px; }
 	.message:hover, .item.hover { background-color:#222; }
 	.name { display:inline; font-weight:600; height:100%; vertical-align:top; }
 	.content { display:block; max-width:100%; vertical-align:top; }
