--- a/Folmes/Resources/Style.css
+++ b/Folmes/Resources/Style.css
@@ -1,17 +1,17 @@
-body { background-color:#1e1e1e; color:#a9a9a9; font-family:"Segoe UI",Arial,sans-serif; margin:0; overflow:hidden; padding-top:2px; word-wrap:break-word; }
-img { cursor:pointer; display:block; max-width:100%; }
+body { background-color:#1e1e1e; color:#a9a9a9; font:caption; margin:0; overflow:hidden; padding-top:2px; word-wrap:break-word; }
+img { cursor:pointer; display:block; max-width:100%;}
 
 ::selection { background:rgba(255,255,255,0.1); color:#ddd; }
 a:link,a:visited,.url { color:#48b; cursor:pointer; text-decoration:none; transition:color .0s ease; }
 a:hover,.url:hover { color:#5ad; cursor:pointer; }
 a:active { color:#48b; }
 
-.file { background-color:#333; border:inset 1px #333; cursor:pointer; padding:0 2px 0 2px; text-decoration:none; transition:background .1s ease; }
+.file { background-color:#333; border:inset 1px #333; cursor:pointer; padding:0px; text-decoration:none; transition:background .1s ease; }
 .file:hover { background-color:#444; cursor:pointer; }
 .file:active { background-color:#333; }
 
 .item { cursor:pointer;}
-.message,.item { margin:0; padding:3px 4px 4px 6px; }
+.message, .item { margin:0; padding:3px 4px 4px 6px; }
 	.message:hover, .item.hover { background-color:#222; }
 	.name { display:inline; font-weight:600; height:100%; vertical-align:top; }
 	.content { display:block; max-width:100%; vertical-align:top; }
