--- a/Folmes/Resources/Style.css
+++ b/Folmes/Resources/Style.css
@@ -13,7 +13,7 @@ a:active { color:#48b; }
 .item { cursor:pointer;}
 .message, .item { margin:0; padding:3px 4px 4px 6px; }
 	.message:hover, .item.hover { background-color:#222; }
-	.name { display:inline; font-weight:600; height:100%; vertical-align:top; }
+	.name { display:block; font-weight:600; height:100%; vertical-align:top; }
 	.content { display:block; max-width:100%; vertical-align:top; }
 	.time { font-size:10px; line-height:1; margin:-3px 0 0 0; opacity:0; padding:0 2px 1px 2px; position:absolute; right:0; transition:opacity .1s linear; }
 	.message:hover .time { opacity:1; }
